fix: remove erros  de sonar